# PepperRun-bevy

./: .gitignore  Cargo.toml  README.md
assets/levels/: level.json
src/: components.rs  main.rs
src/asset_loader/: json_loader.rs  mod.rs
src/camera/: mod.rs  systems.rs
src/debug/: mod.rs  systems.rs
src/game/: mod.rs
src/game/systems/: animations.rs  bg.rs  camera.rs  ice.rs  milk.rs  mod.rs  pepper.rs  player.rs  spike.rs  ui.rs
src/game/systems/physics/: mod.rs  utils.rs
src/level/: mod.rs  systems.rs  utils.rs
src/loading/: mod.rs
src/pepper/: mod.rs  systems.rs
src/physics/: mod.rs  systems.rs  utils.rs
src/player/: mod.rs  systems.rs
src/structs/: bundles.rs  components.rs  mod.rs  resources.rs  states.rs
