[package]
name = "brake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy-inspector-egui = "0.23.4"
egui_dock = "0.11.3"
bevy = "0.13.0"
serde = "1.0.195"
serde_json = "1.0.111"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
